# openalgo-desktop

./: .gitignore  IMPLEMENTATION_PLAN.md  MIGRATION_TRACKER.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/brokers/: mod.rs  types.rs
src-tauri/src/brokers/angel/: mod.rs
src-tauri/src/brokers/fyers/: mod.rs
src-tauri/src/brokers/zerodha/: mod.rs
src-tauri/src/commands/: api_keys.rs  auth.rs  broker.rs  funds.rs  historify.rs  holdings.rs  market.rs  mod.rs  order_logs.rs  orders.rs  positions.rs  quotes.rs  sandbox.rs  settings.rs  strategy.rs  symbols.rs  websocket.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/duckdb/: migrations.rs  mod.rs  models.rs
src-tauri/src/db/sqlite/: analyzer_logs.rs  api_keys.rs  auth.rs  connection.rs  latency_logs.rs  market.rs  migrations.rs  mod.rs  models.rs  order_logs.rs  sandbox.rs  settings.rs  strategy.rs  symbol.rs  traffic_logs.rs  user.rs
src-tauri/src/scheduler/: auto_logout.rs  mod.rs
src-tauri/src/security/: encryption.rs  file_storage.rs  hashing.rs  keychain.rs  mod.rs
src-tauri/src/services/: analyzer_service.rs  funds_service.rs  history_service.rs  holdings_service.rs  mod.rs  options_service.rs  order_service.rs  orderbook_service.rs  position_service.rs  quotes_service.rs  smart_order_service.rs  symbol_service.rs
src-tauri/src/webhook/: handlers.rs  mod.rs  rate_limiter.rs  server.rs  types.rs
src-tauri/src/websocket/: handlers.rs  manager.rs  mod.rs
src/api/: admin.ts  auth.ts  chartink.ts  client.ts  python-strategy.ts  strategy.ts  tauri-client.ts  telegram.ts  trading.ts
src/config/: playgroundEndpoints.ts
src/hooks/: useAutoLogout.ts  useMarketData.ts  useOrderEventRefresh.ts  (+1 more)
(+27 files in other folders)
